--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -8,7 +8,7 @@ editor_options:
   chunk_output_type: console
 ---
 
-The following website details the statistical analysis for the forthcoming paper "Sexual selection shapes the evolution of physiological and life history traits: an experimental evolution approach" by Garlovsky, Brooks, Holman and Snook.
+The following website details the statistical analysis for a forthcoming paper by Garlovsky, Brooks, Holman and Snook.
 
 ### [1. Juvenile development time](juvenile_development.html)
 
