--- a/analysis/metabolites.Rmd
+++ b/analysis/metabolites.Rmd
@@ -233,7 +233,7 @@ metabolite_pairs_plot <- scaled_metabolites %>%
                        discrete = wrap("blank"),
                        combo = wrap(modified_box_no_facet, alpha = 0.7, size = 0.5))) 
 
-metabolite_pairs_plot %>% ggsave(filename = "output/metabolite_pairs_plot.pdf", height = 10, width = 10)
+metabolite_pairs_plot %>% ggsave(filename = "figures/metabolite_pairs_plot.pdf", height = 10, width = 10)
 metabolite_pairs_plot
 ```
 
@@ -579,7 +579,7 @@ p1 <- treat_diff_actual_dryweight %>%
   ylab("Difference in means between\nselection treatments (P - M)") + xlab("Sex")
 
 
-ggsave("output/metabolite_plot.pdf", p1, height=4, width=6)
+ggsave("figures/metabolite_plot.pdf", p1, height=4, width=6)
 p1
 ```
 
@@ -663,7 +663,7 @@ p2 <- treatsex_interaction_data1 %>%
         strip.background = element_blank()) +
   ylab("Posterior density")
 
-ggsave("output/metabolite_interaction_plot.pdf", p2, height=4, width=6)
+ggsave("figures/metabolite_interaction_plot.pdf", p2, height=4, width=6)
 p2
 ```
 
